src-tauri/crates/cc-router-tui/tests/snapshots/ui__help_popup_80x24.snap
---
source: crates/cc-router-tui/tests/ui.rs
expression: "render(&mut a, 80, 24)"
---
"╭ cc-router ──────────────────────────────────────────────── ● 已连接 · v9.9.9 ╮" Hidden by multi-width symbols: [(64, " "), (66, " "), (68, " ")]
"│ 1 总览   2 订阅   3 虚拟模型   4 实时路由   5 日志                           │" Hidden by multi-width symbols: [(5, " "), (7, " "), (14, " "), (16, " "), (23, " "), (25, " "), (27, " "), (29, " "), (36, " "), (38, " "), (40, " "), (42, " "), (49, " "), (51, " ")]
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                           ▟                                                    "
"  ▟▀▙ ▟▀▙ ▄▄▄ ▜▟▜▖▟▀▙ █ █ ▝█▀ ▟▀▙ ▜▟▜▖    http://127.0.0.1:23456                "
"  █ ▄ █ ▄     ▐▌▝▘█ █ █ █  █▗ █▀▀ ▐▌▝▘    鉴权 开启 · 4 个订阅 · 1 个可调度     " Hidden by multi-width symbols: [(43, " "), (45, " "), (48, " "), (50, " "), (57, " "), (59, " "), (61, " "), (68, " "), (70, " "), (72, " "), (74, " ")]
"  ▝▀▘ ▝▀▘     ▀▀  ▝▀▘ ▝▀▝▘ ▝▘ ▝▀▘ ▀▀                                            "
"╭ 今日 ─────────╭ 键位 ────────────────────────────────────────╮───────────────╮" Hidden by multi-width symbols: [(3, " "), (5, " "), (19, " "), (21, " ")]
"│ 请求          │                                              │▁▂▂▄▄▅▅▆▆      │" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"│ 成功率        │  1-5               直达对应页面              │█████████      │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " ")]
"│ Token         │  Tab / Shift+Tab   下一页 / 上一页           │               │" Hidden by multi-width symbols: [(38, " "), (40, " "), (42, " "), (47, " "), (49, " "), (51, " ")]
"╰───────────────│  r                 刷新当前页面              │───────────────╯" Hidden by multi-width symbols: [(38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " ")]
"╭ 订阅健康度 ───│  ?                 打开 / 关闭本帮助         │───────────────╮" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (38, " "), (40, " "), (45, " "), (47, " "), (49, " "), (51, " "), (53, " ")]
"│ ◐ Kimi 备用   │  Esc               关闭弹窗                  │━━━━━━──   91% │" Hidden by multi-width symbols: [(10, " "), (12, " "), (38, " "), (40, " "), (42, " "), (44, " ")]
"│ ✕ 示例中转    │  q / Ctrl+C        退出                      │               │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (38, " "), (40, " ")]
"│ ● 智谱主号    │                                              │━━──────   62% │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " ")]
"│ ○ 停用的订阅  ╰──────────────────────────────────── Esc 关闭 ╯               │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (59, " "), (61, " ")]
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰─────────────────────────────────────────────────────────────────────────── 4 ╯"
" 1-5 切页   r 刷新                                              ? 帮助   q 退出 " Hidden by multi-width symbols: [(6, " "), (8, " "), (15, " "), (17, " "), (67, " "), (69, " "), (76, " "), (78, " ")]
