src-tauri/crates/cc-router-tui/tests/snapshots/ui__overview_80x24.snap
---
source: crates/cc-router-tui/tests/ui.rs
expression: "render(&mut loaded(false), 80, 24)"
---
"╭ cc-router ──────────────────────────────────────────────── ● 已连接 · v9.9.9 ╮" Hidden by multi-width symbols: [(64, " "), (66, " "), (68, " ")]
"│ 1 总览   2 订阅   3 虚拟模型   4 实时路由   5 日志                           │" Hidden by multi-width symbols: [(5, " "), (7, " "), (14, " "), (16, " "), (23, " "), (25, " "), (27, " "), (29, " "), (36, " "), (38, " "), (40, " "), (42, " "), (49, " "), (51, " ")]
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                           ▟                                                    "
"  ▟▀▙ ▟▀▙ ▄▄▄ ▜▟▜▖▟▀▙ █ █ ▝█▀ ▟▀▙ ▜▟▜▖   http://127.0.0.1:23456                 "
"  █ ▄ █ ▄     ▐▌▝▘█ █ █ █  █▗ █▀▀ ▐▌▝▘   鉴权 开启 · 4 个订阅 · 1 个可调度      " Hidden by multi-width symbols: [(42, " "), (44, " "), (47, " "), (49, " "), (56, " "), (58, " "), (60, " "), (67, " "), (69, " "), (71, " "), (73, " ")]
"  ▝▀▘ ▝▀▘     ▀▀  ▝▀▘ ▝▀▝▘ ▝▘ ▝▀▘ ▀▀                                            "
"╭ 今日 ───────────────╮╭ 每小时请求 ───────────────────────────────────────────╮" Hidden by multi-width symbols: [(3, " "), (5, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " ")]
"│ 请求          1,284 ││ ██▆▆▅▅▄▄▂▂▁▁                          ▁▁▂▂▄▄▅▅▆▆      │" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"│ 成功率        98.6% ││ ██████████████▆▆▅▅▄▄▃▃▁▁  ▁▁▃▃▄▄▅▅▆▆████████████      │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
"│ Token          3.2M ││ 0h          6h          12h         18h               │"
"╰─────────────────────╯╰───────────────────────────────────────────────────────╯"
"╭ 订阅健康度 ──────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " ")]
"│ ◐ Kimi 备用           限流 · 00:42            日限额    ━━━━━━━━━━━━──   91% │" Hidden by multi-width symbols: [(10, " "), (12, " "), (25, " "), (27, " "), (49, " "), (51, " "), (53, " ")]
"│ ✕ 示例中转            凭证失效                —                              │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (25, " "), (27, " "), (29, " "), (31, " ")]
"│ ● 智谱主号            正常                    日限额    ━━━━━━━━──────   62% │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (25, " "), (27, " "), (49, " "), (51, " "), (53, " ")]
"│ ○ 停用的订阅          已禁用                  —                              │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (25, " "), (27, " "), (29, " ")]
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰─────────────────────────────────────────────────────────────────────────── 4 ╯"
" 1-5 切页   r 刷新                                              ? 帮助   q 退出 " Hidden by multi-width symbols: [(6, " "), (8, " "), (15, " "), (17, " "), (67, " "), (69, " "), (76, " "), (78, " ")]
