src-tauri/crates/cc-router-tui/tests/snapshots/ui__picker_popup_80x24.snap
---
source: crates/cc-router-tui/tests/ui.rs
assertion_line: 1011
expression: "render(&mut a, 80, 24)"
---
"╭ cc-router ──────────────────────────────────────────────── ● 已连接 · v9.9.9 ╮" Hidden by multi-width symbols: [(64, " "), (66, " "), (68, " ")]
"│ 1 总览   2 订阅   3 虚拟模型   4 实时路由   5 日志                           │" Hidden by multi-width symbols: [(5, " "), (7, " "), (14, " "), (16, " "), (23, " "), (25, " "), (27, " "), (29, " "), (36, " "), (38, " "), (40, " "), (42, " "), (49, " "), (51, " ")]
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                           ▟                                                    "
"  ▟▀▙ ▟▀▙ ╭ 选择模型 ────────────────────────────────────────────────╮          " Hidden by multi-width symbols: [(13, " "), (15, " "), (17, " "), (19, " ")]
"  █ ▄ █ ▄ │                                                          │调度      " Hidden by multi-width symbols: [(71, " "), (73, " ")]
"  ▝▀▘ ▝▀▘ │ gl                                                       │          "
"╭ 今日 ───│ ▌ 使用「gl」                                             │─────────╮" Hidden by multi-width symbols: [(3, " "), (5, " "), (15, " "), (17, " "), (19, " "), (23, " ")]
"│ 请求    │   GLM 4.6 主力                                           │▅▆▆      │" Hidden by multi-width symbols: [(3, " "), (5, " "), (23, " "), (25, " ")]
"│ 成功率  │   GLM 4.5 Air                                            │███      │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
"│ Token   │   GLM 4.5                                                │         │"
"╰─────────│   GLM 4.5 Flash                                          │─────────╯"
"╭ 订阅健康│                                                          │─────────╮" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"│ ◐ Kimi 备                                                          │──   91% │" Hidden by multi-width symbols: [(10, " ")]
"│ ✕ 示例中│                                                          │         │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " ")]
"│ ● 智谱主│                                                          │──   62% │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " ")]
"│ ○ 停用的│                                                          │         │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " ")]
"│         │                                                          │         │"
"│         │                                                          │         │"
"│         ╰ ⏎ 选择   Esc 取消 ────────────────────────────────── 1/5 ╯         │" Hidden by multi-width symbols: [(15, " "), (17, " "), (26, " "), (28, " ")]
"│                                                                              │"
"│                                                                              │"
"╰─────────────────────────────────────────────────────────────────────────── 4 ╯"
" 1-5 切页   r 刷新                                              ? 帮助   q 退出 " Hidden by multi-width symbols: [(6, " "), (8, " "), (15, " "), (17, " "), (67, " "), (69, " "), (76, " "), (78, " ")]
