src-tauri/crates/cc-router-tui/tests/snapshots/ui__placeholder_page_80x24.snap
---
source: crates/cc-router-tui/tests/ui.rs
expression: "render(&mut a, 80, 24)"
---
"╭ cc-router ──────────────────────────────────────────────── ● 已连接 · v9.9.9 ╮" Hidden by multi-width symbols: [(64, " "), (66, " "), (68, " ")]
"│ 1 总览   2 订阅   3 虚拟模型   4 实时路由   5 日志                           │" Hidden by multi-width symbols: [(5, " "), (7, " "), (14, " "), (16, " "), (23, " "), (25, " "), (27, " "), (29, " "), (36, " "), (38, " "), (40, " "), (42, " "), (49, " "), (51, " ")]
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                             此页面将在后续版本提供                             " Hidden by multi-width symbols: [(30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " ")]
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" 1-5 切页                                                       ? 帮助   q 退出 " Hidden by multi-width symbols: [(6, " "), (8, " "), (67, " "), (69, " "), (76, " "), (78, " ")]
