src-tauri/crates/cc-router-tui/tests/snapshots/ui__subscriptions_120x40.snap
---
source: crates/cc-router-tui/tests/ui.rs
expression: "render(&mut subs_app(false), 120, 40)"
---
"╭ cc-router ──────────────────────────────────────────────────────────────────────────────────────── ● 已连接 · v9.9.9 ╮" Hidden by multi-width symbols: [(104, " "), (106, " "), (108, " ")]
"│ 1 总览   2 订阅   3 虚拟模型   4 实时路由   5 日志                                                                   │" Hidden by multi-width symbols: [(5, " "), (7, " "), (14, " "), (16, " "), (23, " "), (25, " "), (27, " "), (29, " "), (36, " "), (38, " "), (40, " "), (42, " "), (49, " "), (51, " ")]
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭ 订阅 (3) ──────────────────────────────────────────────╮╭ 智谱主号 ──────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(3, " "), (5, " "), (61, " "), (63, " "), (65, " "), (67, " ")]
"│      备注名               厂商         sonnet          ││ 状态      ● 正常                                           │" Hidden by multi-width symbols: [(8, " "), (10, " "), (12, " "), (29, " "), (31, " "), (61, " "), (63, " "), (73, " "), (75, " ")]
"│ ▌ ●  智谱主号             智谱         glm-4.6         ││ 厂商      智谱 · api_key                                   │" Hidden by multi-width symbols: [(8, " "), (10, " "), (12, " "), (14, " "), (29, " "), (31, " "), (61, " "), (63, " "), (71, " "), (73, " ")]
"│   ◐  Kimi 备用            Moonshot     (pending)       ││ 端点      https://open.bigmodel.cn/api/anthropic           │" Hidden by multi-width symbols: [(13, " "), (15, " "), (61, " "), (63, " ")]
"│   ✕  示例中转             自定义中转   claude-sonnet-… ││ 槽位                                                       │" Hidden by multi-width symbols: [(8, " "), (10, " "), (12, " "), (14, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (61, " "), (63, " ")]
"│                                                        ││   fable   glm-4.6                 auto                     │"
"│                                                        ││   opus    glm-4.6                 high                     │"
"│                                                        ││   sonnet  glm-4.6                 auto                     │"
"│                                                        ││   haiku   glm-4.5-air             auto                     │"
"│                                                        ││   兜底    (未配置)                                         │" Hidden by multi-width symbols: [(63, " "), (65, " "), (72, " "), (74, " "), (76, " ")]
"│                                                        ││ 限额      日限额    ━━━━━━━━━──────   62% 620 / 1.0K       │" Hidden by multi-width symbols: [(61, " "), (63, " "), (71, " "), (73, " "), (75, " ")]
"│                                                        ││ 余额      账户不可用 (可能欠费或被封)                      │" Hidden by multi-width symbols: [(61, " "), (63, " "), (71, " "), (73, " "), (75, " "), (77, " "), (79, " "), (83, " "), (85, " "), (87, " "), (89, " "), (91, " "), (93, " "), (95, " ")]
"│                                                        ││           余额 39.28 CNY                                   │" Hidden by multi-width symbols: [(71, " "), (73, " ")]
"│                                                        ││           赠送余额 1.00 CNY 即将过期                       │" Hidden by multi-width symbols: [(71, " "), (73, " "), (75, " "), (77, " "), (89, " "), (91, " "), (93, " "), (95, " ")]
"│                                                        ││ 模型      已缓存 12 个                                     │" Hidden by multi-width symbols: [(61, " "), (63, " "), (71, " "), (73, " "), (75, " "), (81, " ")]
"│                                                        ││ 被引用    model-sonnet, model-opus                         │" Hidden by multi-width symbols: [(61, " "), (63, " "), (65, " ")]
"│                                                        ││ 最近错误  —                                                │" Hidden by multi-width symbols: [(61, " "), (63, " "), (65, " "), (67, " ")]
"│                                                        ││                                                            │"
"│                                                        ││                                                            │"
"│                                                        ││                                                            │"
"│                                                        ││                                                            │"
"│                                                        ││                                                            │"
"│                                                        ││                                                            │"
"│                                                        ││                                                            │"
"│                                                        ││                                                            │"
"│                                                        ││                                                            │"
"│                                                        ││                                                            │"
"│                                                        ││                                                            │"
"│                                                        ││                                                            │"
"│                                                        ││                                                            │"
"│                                                        ││                                                            │"
"│                                                        ││                                                            │"
"│                                                        ││                                                            │"
"│                                                        ││                                                            │"
"│                                                        ││                                                            │"
"╰─────────────────────────────────────────────────── 1/3 ╯╰────────────────────────────────────────────────────────────╯"
" 1-5 切页   ↑↓ 选择   e 启停   t 测试   m 模型   b 余额                                                 ? 帮助   q 退出 " Hidden by multi-width symbols: [(6, " "), (8, " "), (16, " "), (18, " "), (25, " "), (27, " "), (34, " "), (36, " "), (43, " "), (45, " "), (52, " "), (54, " "), (107, " "), (109, " "), (116, " "), (118, " ")]
